<?xml version="1.0" encoding="utf-8"?>

<!-- strings -->

<resources>
    <string name="app_name" translatable="false">Battery Live</string>

    <!-- About things -->
    <string name="about" translatable="false">About</string>
    <string name="dev_infos">Developer info</string>
    <string name="dev_name" translatable="false">\u2022 Enrico D\'Ortenzio</string>
    <string name="credits">Credits</string>
    <string name="ivan" translatable="false">\u2022 Ivan D\'Ortenzio</string>
    <string name="stack" translatable="false">\u2022 stackoverflow</string>
    <string name="maticons" translatable="false">\u2022 Material design icons</string>
    <string name="ItsPriyesh" translatable="false">\u2022 Priyesh Patel</string>
    <string name="MrBIMC" translatable="false">\u2022 Pavel Sikun</string>
    <string name="jedi" translatable="false">\u2022 JediBurrel</string>
    <string name="nao" translatable="false">\u2022 naofum</string>
    <string name="lucas" translatable="false">\u2022 Lucas Urbas</string>
    <string name="libs">Libraries</string>
    <string name="appcompat" translatable="false">\u2022 v7 appcompat library</string>
    <string name="chroma" translatable="false">\u2022 VintageChroma</string>
    <string name="application_info">Application info</string>
    <string name="version">Version</string>

    <!-- Preference categories -->
    <string name="settings">Options</string>
    <string name="other">Others</string>

    <!-- live wallpaper modes -->
    <string name="pref_mode" translatable="false">pref_mode</string>
    <string name="day_mode">Hour of the day</string>
    <string name="battery_mode">Battery colors</string>
    <string name="default_mode">Custom</string>
    <string name="mode">Live Wallpaper modes</string>
    <string name="mode_summary">Choose the live wallpaper mode</string>

    <!-- default modes -->
    <string name="charge">Charge color</string>
    <string name="discharge">Discharge color</string>
    <string name="apply">Apply!</string>
    <string name="apply_summary">Click to apply the changes!</string>

    <!-- battery percentage options -->
    <string name="battery_text">Enable battery percent</string>
    <string name="battery_text_summary">Show battery percent at the center of the wall</string>

    <string name="typeface">Change typeface</string>
    <string name="typeface_summary">Change battery percentage typeface font</string>

    <string name="pref_typeface" translatable="false">pref_typeface</string>
    <string name="serif" translatable="false">Serif</string>
    <string name="sansserif" translatable="false">Sans serif</string>
    <string name="monospace" translatable="false">Monospace</string>
    <string name="normal_bold" translatable="false">Normal bold</string>
    <string name="normal" translatable="false">Normal</string>
    <string name="txt_size">Change size</string>
    <string name="txt_size_summary">Change battery percentage size</string>
    <string name="txt_size_hint">a number from 1 to 50</string>
    <string name="color">Change color</string>

    <!-- Theme options -->
    <string name="pref_theme_title">App theme</string>
    <string name="themesum">Choose your preferred theme</string>
    <string name="pref_theme" translatable="false">pref_theme</string>
    <string name="pref_theme_list" translatable="false">pref_theme_list</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="darkest_theme">Darker</string>
    <string name="toolbarColor">Change toolbar color</string>
    <string name="lightColor">Apply light status bar</string>
    <string name="lightColor_summary">Apply a dark tone to status bar icon</string>
    <string name="message">Feature not available in Lollipop</string>

</resources>