<?xml version="1.0" encoding="utf-8"?>

<!-- Preferences -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/preference_screen">

    <PreferenceCategory android:title="@string/settings" />

    <!-- LiveWallpaper Modes -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/mode_options"
        android:entryValues="@array/mode_list_values"
        android:key="@string/pref_mode"
        android:summary="@string/mode_summary"
        android:title="@string/mode" />

    <!-- Charge color -->
    <Preference
        android:key="chargeColor"
        android:title="@string/charge" />

    <!-- Discharge color -->
    <Preference
        android:key="dischargeColor"
        android:title="@string/discharge" />

    <!-- Add battery text -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="batteryText"
        android:summary="@string/battery_text_summary"
        android:title="@string/battery_text" />

    <!-- Typeface-->
    <ListPreference
        android:defaultValue="3"
        android:entries="@array/typeface_options"
        android:entryValues="@array/typeface_list_values"
        android:key="@string/pref_typeface"
        android:summary="@string/typeface_summary"
        android:title="@string/typeface" />

    <!-- Text size-->
    <EditTextPreference
        android:inputType="number"
        android:key="sizeTxt"
        android:summary="@string/txt_size_summary"
        android:title="@string/txt_size" />

    <!-- Battery percentage color -->
    <Preference
        android:key="batteryColor"
        android:title="@string/color" />

    <!-- Apply -->
    <Preference
        android:key="apply"
        android:summary="@string/apply_summary"
        android:title="@string/apply" />

    <PreferenceCategory android:title="@string/other" />

    <!-- Theme -->
    <ListPreference
        android:defaultValue="8"
        android:entries="@array/theme_options"
        android:entryValues="@array/pref_theme_list_values"
        android:key="@string/pref_theme"
        android:summary="@string/themesum"
        android:title="@string/pref_theme_title" />

    <!-- Toolbar color -->
    <Preference
        android:key="toolbarColor"
        android:title="@string/toolbarColor" />

    <!-- Light colored status bar -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="lightColored"
        android:summary="@string/lightColor_summary"
        android:title="@string/lightColor" />

</PreferenceScreen>