<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_frame"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/theme_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="?attr/popupTheme"
        tools:ignore="NewApi" />

    <ScrollView
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/dev_infos"
                android:id="@+id/dev"
                style="@style/HeadlineTextStyle" />

            <TextView
                android:text="@string/dev_name"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/enrico_git"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/enrico_gplus"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/credits"
                android:text="@string/credits"
                style="@style/HeadlineTextStyle" />

            <TextView
                android:text="@string/ivan"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ivan_git"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ivan_gplus"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/stack"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/stack_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/maticons"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/maticons_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/ItsPriyesh"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/itspriyesh_git"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/MrBIMC"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/mrbimc_git"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/jedi"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/jedi_git"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/nao"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/nao_git"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/lucas"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lucas_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/libs"
                android:text="@string/libs"
                style="@style/HeadlineTextStyle" />

            <TextView
                android:text="@string/appcompat"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/appcompat_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/chroma"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/chroma_git"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/app_info"
                android:text="@string/application_info"
                style="@style/HeadlineTextStyle" />

            <TextView
                android:id="@+id/version"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sources"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
